--- a/ModDetails/OwlcatModificationManifest.json
+++ b/ModDetails/OwlcatModificationManifest.json
@@ -5,7 +5,7 @@
   "Description": "Once this mod is installed, it will automatically take care of installing/uninstalling subscribed/unsubscribed workshop items on game start without having to rely on the external tool. After starting the game it will try to install any workshop items. After finishing that process the game will need to be restarted for it to take effect.",
   "Author": "ADDB",
   "ImageName": "Thumbnail.jpg",
-  "WorkshopId": "",
+  "WorkshopId": "3084249657",
   "Repository": "",
   "HomePage": "",
   "Dependencies": []
